--- a/commons/useronly.jspf
+++ b/commons/useronly.jspf
@@ -2,8 +2,11 @@
     pageEncoding="UTF-8"%>
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 
-
+			<c:choose>
 	          <c:when test="${not empty userId}">
-	          	<c:redirect url=/login.jsp>
-	          	</c:redirect>
+	          	
 	          </c:when>
+	          <c:otherwise>
+	          <% response.sendRedirect("/login.jsp"); %>
+	          </c:otherwise>
+	          </c:choose>
