--- a/commons/footer.jspf
+++ b/commons/footer.jspf
@@ -20,11 +20,10 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>도움되는 링크</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="main.jsp">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.jsp">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#about">About</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">문제 게시판</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">커뮤니티</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">여분</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="quizBoard.jsp">문제 게시판</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="bbs.jsp">커뮤니티</a></li>
             </ul>
           </div>
 
